[gd_scene load_steps=6 format=3 uid="uid://d7ay5upbgnx0"]

[ext_resource type="Script" uid="uid://dclcoehldtdcd" path="res://addons/asset_placer/ui/folders_window/folder_view.gd" id="1_q40po"]
[ext_resource type="Script" uid="uid://dmicn3kmr620j" path="res://addons/asset_placer/utils/system_icon.gd" id="2_q40po"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q40po"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Texture2D" id="Texture2D_q40po"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_q40po")
icon_name = &"Reload"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[sub_resource type="Texture2D" id="Texture2D_ojff7"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_q40po")
icon_name = &"Remove"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[node name="FolderView" type="Control"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_q40po")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q40po")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 2

[node name="PathLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Folder path"

[node name="SubfoldersCheckbox" type="CheckBox" parent="Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Include sub folders"

[node name="SyncButton" type="Button" parent="Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Reload"
icon = SubResource("Texture2D_q40po")

[node name="DeleteButton" type="Button" parent="Panel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Remove"
icon = SubResource("Texture2D_ojff7")
